--- a/css/styles.css
+++ b/css/styles.css
@@ -3,3 +3,17 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+/* header */
+
+header {
+    height: 100px;
+}
+
+nav img:first-of-type {
+    width: 80px;
+}
+
+nav img:nth-of-type(2) {
+    width: 150px;
+}
