--- a/css/styles.css
+++ b/css/styles.css
@@ -10,10 +10,39 @@ header {
     height: 100px;
 }
 
-nav img:first-of-type {
+nav img {
     width: 80px;
 }
 
-nav img:nth-of-type(2) {
-    width: 150px;
+/* sidebar */
+
+.sidebar {
+    width: 100px;
+    background-color: rgb(5, 30, 52);
+    z-index: 1000;
+    padding: 0;
+    margin-top: 100px;
+    height: calc(100vh - 100px);
+}
+
+.sidebar i {
+    color: #fff;
+    font-size: 25px;
+}
+
+.sidebar span {
+    color: white;
+    font-size: 20px;
+    margin-left: 10px;
+}
+
+/* media queary - desktop */
+
+@media screen and (min-width: 992px) {
+    .sidebar {
+        width: 150px;
+    }
+    nav img {
+        width: 130px;
+    }
 }
