[FEAT]: lente top bar, img bg sidebar

--- a/css/styles.css
+++ b/css/styles.css
@@ -45,6 +45,7 @@ nav img {
 .sidebar {
     width: 100px;
     background-color: rgb(5, 30, 52);
+    background-image: url(../img/sidebar-bg.png);
     padding: 0;
     margin-top: 100px;
     height: calc(100vh - 100px);
